[package]
name = "near-chain-primitives"
version = "0.15.0"
authors = ["Zigtur <zigtur@protonmail.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
edition = "2021"
rust-version = "1.64.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/nearcore"
description = "This crate hosts NEAR chain-related error types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

near-primitives = { path = "../../core/primitives" }
near-crypto = { path = "../../core/crypto" }
