[package]
name = "near-chunks-primitives"
version = "0.15.0"
authors = ["Zigtur <zigtur@protonmail.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
edition = "2021"
rust-version = "1.64.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/nearcore"
description = "This crate hosts NEAR chunks-related error types"

[dependencies]
near-chain-primitives = { path = "../chain-primitives" }
near-primitives = { path = "../../core/primitives" }
