[package]
name = "near-indexer-primitives"
version = "0.15.0"
authors = ["Zigtur <zigtur@protonmail.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
edition = "2021"
rust-version = "1.64.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Post-Quantum-Team/Post-Quantum-Nearcore"
description = "This crate hosts structures for the NEAR Indexer Framework types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_json = "1.0.68"

near-primitives = { path = "../../core/primitives" }
