[package]
name = "near-jsonrpc-primitives"
version = "0.15.0"
authors = ["Zigtur <zigtur@protonmail.com>"]
# Please update rust-toolchain.toml as well when changing version here:
edition = "2021"
rust-version = "1.64.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Post-Quantum-Team/Post-Quantum-Nearcore"
description = "This crate hosts structures for the NEAR JSON RPC Requests, Responses and Error types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_json = "1.0.68"
thiserror = "1.0.30"

near-crypto = { path = "../../core/crypto" }
near-primitives = { path = "../../core/primitives" }
near-chain-configs = { path = "../../core/chain-configs" }
near-rpc-error-macro = { path = "../../tools/rpctypegen/macro" }
near-client-primitives = { path = "../client-primitives", optional = true }

[features]
full = ["debug_types"]
debug_types = ["near-client-primitives"]
test_features = []
