[package]
name = "near-jsonrpc"
version = "0.15.0"
authors = ["Zigtur <zigtur@protonmail.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
edition = "2021"
rust-version = "1.64.0"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-web = "4.0.1"
easy-ext = "0.2"
futures = "0.3.5"
once_cell = "1.13.1"
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_json = "1.0.68"
tokio = { version = "1.16.1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1.36", features = ["std"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "registry", "std"] }

near-chain-configs = { path = "../../core/chain-configs" }
near-client-primitives = { path = "../client-primitives" }
near-primitives = { path = "../../core/primitives" }
near-client = { path = "../client" }
near-network = { path = "../network" }
near-o11y = { path = "../../core/o11y" }
near-jsonrpc-client = { path = "client" }
near-jsonrpc-primitives = { path = "../jsonrpc-primitives", features = ["full"] }
near-jsonrpc-adversarial-primitives = { path = "../jsonrpc-adversarial-primitives", optional = true }
near-rpc-error-macro = { path = "../../tools/rpctypegen/macro" }
near-network-primitives = { path = "../network-primitives" }

[features]
dump_errors_schema = ["near-rpc-error-macro/dump_errors_schema"]
test_features = [
  "near-client/test_features",
  "near-network/test_features",
  "near-jsonrpc-primitives/test_features",
  "near-jsonrpc-adversarial-primitives/test_features",
]
nightly = ["nightly_protocol"]
nightly_protocol = ["near-primitives/nightly_protocol"]
sandbox = [
  "near-client/sandbox",
]
