[package]
name = "near-chain-configs"
version = "0.15.0"
authors = ["Zigtur <zigtur@protonmail.com>"]
# Please update rust-toolchain.toml as well when changing version here:
edition = "2021"
rust-version = "1.64.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/nearcore"
description = "This crate provides typed interfaces to the NEAR Genesis and Chain Configs"

[dependencies]
anyhow = "1.0.62"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.9"
num-rational = { version = "0.3.1", features = ["serde"] }
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_json = "1.0.68"
sha2 = "0.10"
smart-default = "0.6"
tracing = { version = "0.1.36", features = ["std"] }

near-crypto = { path = "../crypto" }
near-primitives = { path = "../primitives" }

[features]
default = []
