[package]
name = "near-primitives"
version = "0.15.0"
authors = ["Zigtur <zigtur@protonmail.com>"]
# Please update rust-toolchain.toml as well when changing version here:
edition = "2021"
rust-version = "1.64.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Post-Quantum-Team/Post-Quantum-Nearcore"
description = """
This crate provides the base set of primitives used by other nearcore crates
"""

[dependencies]
borsh = { version = "0.9", features = ["rc"] }
byteorder = "1.3"
bytesize = { version = "1.1", features = ["serde"] }
cfg-if = "1"
chrono = { version = "0.4.19", features = ["serde"] }
deepsize = { version = "0.2.0", features = ["chrono"], optional = true }
derive_more = "0.99.9"
easy-ext = "0.2"
hex = { version = "0.4.2", features = ["serde"] }
num-rational = { version = "0.3.1", features = ["serde"] }
once_cell = "1.13.1"
primitive-types = { version = "0.10", default-features = false }
rand = "0.8.5"
reed-solomon-erasure = "4"
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_json = "1.0.68"
smart-default = "0.6"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.30"

near-primitives-core = { path = "../primitives-core"}
near-crypto = { path = "../crypto" }
near-vm-errors = { path = "../../runtime/near-vm-errors" }
near-rpc-error-macro = { path = "../../tools/rpctypegen/macro" }

[features]
sandbox = []
dump_errors_schema = ["near-rpc-error-macro/dump_errors_schema"]
protocol_feature_fix_staking_threshold = []
protocol_feature_fix_contract_loading_cost = []
protocol_feature_reject_blocks_with_outdated_protocol_version = []
protocol_feature_ed25519_verify = [
  "near-primitives-core/protocol_feature_ed25519_verify"
]
nightly = [
  "nightly_protocol",
  "protocol_feature_fix_staking_threshold",
  "protocol_feature_fix_contract_loading_cost",
  "protocol_feature_reject_blocks_with_outdated_protocol_version",
  "protocol_feature_ed25519_verify",
]

nightly_protocol = []


# Shardnet is the experimental network that we deploy for chunk-only producer testing.
shardnet = ["protocol_feature_reject_blocks_with_outdated_protocol_version"]

deepsize_feature = [
  "deepsize",
  "near-vm-errors/deepsize_feature",
  "near-primitives-core/deepsize_feature",
  "near-crypto/deepsize_feature",
]

[dev-dependencies]
assert_matches = "1.5.0"
bencher = "0.1.5"
insta = "1.14.0"

[[bench]]
name = "serialization"
harness = false
