[package]
name = "near-vm-errors"
version = "0.15.0"
authors = ["Zigtur <zigtur@protonmail.com>"]
# Please update rust-toolchain.toml as well when changing version here:
edition = "2021"
rust-version = "1.64.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/Post-Quantum-Team/Post-Quantum-Nearcore"
description = """
Error that can occur inside Near Runtime encapsulated in a separate crate. Might merge it later.
"""

[dependencies]
borsh = { version = "0.9", features = ["rc"] }
deepsize = { version = "0.2.0", features = ["chrono"], optional = true }
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
strum = { version = "0.24", features = ["derive"] }

near-account-id = { path = "../../core/account-id" }
near-rpc-error-macro = { path = "../../tools/rpctypegen/macro" }

[features]
dump_errors_schema = ["near-rpc-error-macro/dump_errors_schema"]
deepsize_feature = [
  "deepsize",
  "near-account-id/deepsize_feature",
]
